// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-infra-planner - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Architect and plan multi-service Azure infrastructure from workload descriptions. Preferred over azure-prepare when the user describes a complete system architecture combining multiple Azure services rather than working with an existing project or codebase. WHEN: provision a multi-service system, deploy a GenAI or LLM backend with supporting services, launch a chatbot or AI service, deploy microservices on AKS, build a SaaS platform, plan a data pipeline, create an IoT solution, provision ML training or inference infrastructure, deploy container apps workloads, build a 3-tier architecture, set up backup and disaster recovery, provision event-driven architectures, plan Azure infrastructure from requirements, what Azure resources do I need, generate Bicep or Terraform from a workload description. DO NOT USE FOR: preparing an existing codebase for Azure (use azure-prepare), adding features to existing app (use azure-prepare), executing azd up (use azure-deploy).",
  "extractedKeywords": [
    "3-tier",
    "adding",
    "ai",
    "aks",
    "apps",
    "architect",
    "architecture",
    "architectures",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "backend",
    "backup",
    "bicep",
    "build",
    "chatbot",
    "codebase",
    "combining",
    "complete",
    "container",
    "cosmos",
    "create",
    "data",
    "deploy",
    "describes",
    "description",
    "descriptions",
    "diagnostic",
    "disaster",
    "event-driven",
    "executing",
    "existing",
    "features",
    "from",
    "genai",
    "generate",
    "identity",
    "inference",
    "infra",
    "infrastructure",
    "key vault",
    "launch",
    "mcp",
    "microservices",
    "monitor",
    "multi-service",
    "multiple",
    "need",
    "over",
    "pipeline",
    "plan",
    "planner",
    "platform",
    "preferred",
    "preparing",
    "project",
    "provision",
    "rather",
    "recovery",
    "requirements",
    "resources",
    "saas",
    "service",
    "services",
    "solution",
    "supporting",
    "system",
    "terraform",
    "than",
    "training",
    "user",
    "what",
    "when",
    "with",
    "working",
    "workload",
    "workloads",
  ],
  "name": "azure-infra-planner",
}
`;

exports[`azure-infra-planner - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "3-tier",
  "adding",
  "ai",
  "aks",
  "apps",
  "architect",
  "architecture",
  "architectures",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "backend",
  "backup",
  "bicep",
  "build",
  "chatbot",
  "codebase",
  "combining",
  "complete",
  "container",
  "cosmos",
  "create",
  "data",
  "deploy",
  "describes",
  "description",
  "descriptions",
  "diagnostic",
  "disaster",
  "event-driven",
  "executing",
  "existing",
  "features",
  "from",
  "genai",
  "generate",
  "identity",
  "inference",
  "infra",
  "infrastructure",
  "key vault",
  "launch",
  "mcp",
  "microservices",
  "monitor",
  "multi-service",
  "multiple",
  "need",
  "over",
  "pipeline",
  "plan",
  "planner",
  "platform",
  "preferred",
  "preparing",
  "project",
  "provision",
  "rather",
  "recovery",
  "requirements",
  "resources",
  "saas",
  "service",
  "services",
  "solution",
  "supporting",
  "system",
  "terraform",
  "than",
  "training",
  "user",
  "what",
  "when",
  "with",
  "working",
  "workload",
  "workloads",
]
`;
